--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
   </style>
 </head>
 <body>
-  <iframe src="https://www.foxnews.com" id="framed-site"></iframe>
+  <iframe src="https://www.foxnews.com" id="Russian State Media"></iframe>
 </body>
 </html>
