--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="icon" type="image/png" href="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Hammer_and_sickle.svg/250px-Hammer_and_sickle.svg.png">
   <meta charset="UTF-8">
   <title>Russian State Media</title>
+  <link rel="icon" type="image/png" href="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Hammer_and_sickle.svg/250px-Hammer_and_sickle.svg.png">
   <style>
     html, body {
       margin: 0;
@@ -19,6 +19,10 @@
   </style>
 </head>
 <body>
-  <iframe src="https://www.foxnews.com" id="Russian State Media"></iframe>
+  <iframe
+    src="https://rsm-production.up.railway.app"
+    id="russian-state-media"
+    title="Russian State Media Mirror"
+  ></iframe>
 </body>
 </html>
